# workshop_airflow

./: exemplo_00.py  exemplo_01.py  main.py  pyproject.toml
